force-app/main/default/objects/Opportunity/fields/Accession_Number__c.field-meta.xml
<CustomField>
    <fullName>Accession_Number__c</fullName>
    <label>Accession Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>