force-app/main/default/objects/Opportunity/fields/ACT_Disclosure_5__c.field-meta.xml
<CustomField>
    <fullName>ACT_Disclosure_5__c</fullName>
    <label>Yes/No</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>