force-app/main/default/objects/Opportunity/fields/ACT_Disclosure_6A__c.field-meta.xml
<CustomField>
    <fullName>ACT_Disclosure_6A__c</fullName>
    <label>Please Explain Below</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>