force-app/main/default/objects/Opportunity/fields/ACT_IP_Checklist_A__c.field-meta.xml
<CustomField>
    <fullName>ACT_IP_Checklist_A__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Sponsor is a US entity using non-Federal Dollars to fund work. Appendix A of ACT class waiver applies</inlineHelpText>
    <label>ACT IP Checklist: A</label>
    <type>Checkbox</type>
</CustomField>