force-app/main/default/objects/Opportunity/fields/ACT_IP_Checklist_A_Details__c.field-meta.xml
<CustomField>
    <fullName>ACT_IP_Checklist_A_Details__c</fullName>
    <label>ACT IP Checklist A Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Battelle is lead party. No IP transferred, but Sponsor can own technical information (TI) created under the agreement (DOE Approval NOT Required)</fullName>
            </value>
            <value>
                <fullName>Battelle is lead party. Sponsor gets royalty-free right to use TI subject to Battelle IP rights. (DOE Approval NOT Required)</fullName>
            </value>
            <value>
                <fullName>Battelle is lead party. Battelle will report new inventions to Sponsor, under the terms of a separate option IP option Sponsor may license new IP from Battelle. (DOE Approval NOT Required)</fullName>
            </value>
            <value>
                <fullName>Sponsor is lead party. Takes on all responsibilities under the class waiver. (DOE Approval NOT Required)</fullName>
            </value>
            <value>
                <fullName>Other- Please work with IPLS for phrasing-(DOE Approval may or may not be Required</fullName>
                <label>Other- Please work with IPLS for phrasing (DOE Approval may or may not be Required)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>