force-app/main/default/objects/Opportunity/fields/ACT_IP_Checklist_B__c.field-meta.xml
<CustomField>
    <fullName>ACT_IP_Checklist_B__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Sponsor is a Non-US Entity or a US entity using Federal Funds.</inlineHelpText>
    <label>ACT IP Checklist: B</label>
    <type>Checkbox</type>
</CustomField>