force-app/main/default/objects/Opportunity/fields/ACT_IP_Checklist_B_Details__c.field-meta.xml
<CustomField>
    <fullName>ACT_IP_Checklist_B_Details__c</fullName>
    <label>ACT IP Checklist B Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No IP transferred. Battelle owns IP under terms of M&amp;O contract (DOE Approval Required)</fullName>
            </value>
            <value>
                <fullName>Other- Please work with IPLS for phrasing (DOE Approval Required)</fullName>
            </value>
            <value>
                <fullName>No IP transferred. Sponsor own IP under terms reviewed and approved by DOE (DOE Approval Required)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>