force-app/main/default/objects/Opportunity/fields/ACT_IP_Checklist_C__c.field-meta.xml
<CustomField>
    <fullName>ACT_IP_Checklist_C__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Sponsor is a US entity and wants restricted Government Rights</inlineHelpText>
    <label>ACT IP Checklist: C</label>
    <type>Checkbox</type>
</CustomField>