force-app/main/default/objects/Opportunity/fields/ACT_IP_Checklist_C_Details__c.field-meta.xml
<CustomField>
    <fullName>ACT_IP_Checklist_C_Details__c</fullName>
    <label>ACT IP Checklist C Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Battelle is lead party, TI subject to 5 year protection limitation (DOE Approval Required)</fullName>
            </value>
            <value>
                <fullName>Sponsor is lead party. TI subject to 5 year protection limitation (DOE Approval Required)</fullName>
            </value>
            <value>
                <fullName>Other- Please work with IPLS for phrasing (DOE Approval Required)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>