force-app/main/default/objects/Opportunity/fields/Amendments_Total__c.field-meta.xml
<CustomField>
    <fullName>Amendments_Total__c</fullName>
    <label>Amendments Total</label>
    <summarizedField
  >Proposed_Amendment__c.Amendment_Authorized_Amount__c</summarizedField>
    <summaryForeignKey>Proposed_Amendment__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>