force-app/main/default/objects/Opportunity/fields/Approach__c.field-meta.xml
<CustomField>
    <fullName>Approach__c</fullName>
    <label>Approach</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>