force-app/main/default/objects/Opportunity/fields/Approval_Recalled__c.field-meta.xml
<CustomField>
    <fullName>Approval_Recalled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Recalled</label>
    <type>Checkbox</type>
</CustomField>