force-app/main/default/objects/Opportunity/fields/B_R__c.field-meta.xml
<CustomField>
    <fullName>B_R__c</fullName>
    <label>B&amp;R #</label>
    <length>6</length>
    <type>Text</type>
</CustomField>