force-app/main/default/objects/Opportunity/fields/B_R_Text__c.field-meta.xml
<CustomField>
    <fullName>B_R_Text__c</fullName>
    <formula>PNNL_Budget_Reporting_Number__r.PNNL_Budget_Reporting_Number_External__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B&amp;R Text</label>
    <type>Text</type>
</CustomField>