force-app/main/default/objects/Opportunity/fields/BER_Scientific_Focus_Area_SFA__c.field-meta.xml
<CustomField>
    <fullName>BER_Scientific_Focus_Area_SFA__c</fullName>
    <label>BER Scientific Focus Area (SFA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00. Not Applicable</fullName>
            </value>
            <value>
                <fullName>11. Genomics: GTL - Biofuels</fullName>
            </value>
            <value>
                <fullName>13. Genomics: GTL Fundamental Science</fullName>
            </value>
            <value>
                <fullName>15. Low Dose Radiation</fullName>
            </value>
            <value>
                <fullName>22. Climate and Earth System Modeling</fullName>
            </value>
            <value>
                <fullName>32. Subsurface Biogeochemical Research</fullName>
            </value>
            <value>
                <fullName>62. Atmospheric System Research</fullName>
            </value>
            <value>
                <fullName>63. Radiochemistry &amp; Imaging Instrumentation</fullName>
            </value>
            <value>
                <fullName>64. Systems Biology Knowledgebase</fullName>
            </value>
            <value>
                <fullName>65. Terrestrial Ecosystem Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>