force-app/main/default/objects/Opportunity/fields/BMI_Client_Type__c.field-meta.xml
<CustomField>
    <fullName>BMI_Client_Type__c</fullName>
    <label>BMI Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>CG</fullName>
            </value>
            <value>
                <fullName>CI</fullName>
            </value>
            <value>
                <fullName>FG</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>IG</fullName>
            </value>
            <value>
                <fullName>II</fullName>
            </value>
            <value>
                <fullName>IR+D</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>Old</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>