force-app/main/default/objects/Opportunity/fields/BO_Tax_Credit__c.field-meta.xml
<CustomField>
    <fullName>BO_Tax_Credit__c</fullName>
    <description>BO Tax Credit</description>
    <label>BO Tax Credit</label>
    <length>16</length>
    <type>Text</type>
</CustomField>