force-app/main/default/objects/Opportunity/fields/BOA__c.field-meta.xml
<CustomField>
    <fullName>BOA__c</fullName>
    <label>BOA #</label>
    <length>6</length>
    <type>Text</type>
</CustomField>