force-app/main/default/objects/Opportunity/fields/Budget_Year__c.field-meta.xml
<CustomField>
    <fullName>Budget_Year__c</fullName>
    <label>Budget Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2028</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>