force-app/main/default/objects/Opportunity/fields/Clear_Date__c.field-meta.xml
<CustomField>
    <fullName>Clear_Date__c</fullName>
    <label>Clear Date</label>
    <type>Date</type>
</CustomField>