force-app/main/default/objects/Opportunity/fields/Clear_Scope__c.field-meta.xml
<CustomField>
    <fullName>Clear_Scope__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clear Scope</label>
    <type>Checkbox</type>
</CustomField>