force-app/main/default/objects/Opportunity/fields/Client_Contract_Representative__c.field-meta.xml
<CustomField>
    <fullName>Client_Contract_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Contract Representative</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>