force-app/main/default/objects/Opportunity/fields/Commercialization_Manager2__c.field-meta.xml
<CustomField>
    <fullName>Commercialization_Manager2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercialization Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Commercialization_Manager__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>