force-app/main/default/objects/Opportunity/fields/Commercialization_Manager_CM__c.field-meta.xml
<CustomField>
    <fullName>Commercialization_Manager_CM__c</fullName>
    <label>Commercialization Manager (CM)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>