force-app/main/default/objects/Opportunity/fields/Contract_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Contract_Administrator__c</fullName>
    <label>Contract Administrator</label>
    <length>25</length>
    <type>Text</type>
</CustomField>