force-app/main/default/objects/Opportunity/fields/Contract_Client__c.field-meta.xml
<CustomField>
    <fullName>Contract_Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract Sponsor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Client</relationshipLabel>
    <relationshipName>Contract_Client</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>