force-app/main/default/objects/Opportunity/fields/Contract_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Contract_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Specialist</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Contracts_Specialist__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>