force-app/main/default/objects/Opportunity/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BOA - Basic Ordering Agreement</fullName>
            </value>
            <value>
                <fullName>CPAF - Cost Plus Award Fee</fullName>
            </value>
            <value>
                <fullName>CPFF - Cost Plus Fixed Fee</fullName>
            </value>
            <value>
                <fullName>CPIF - Cost Plus Incentive Fee</fullName>
            </value>
            <value>
                <fullName>CPPC - Cost Plus Percentage of Cost</fullName>
            </value>
            <value>
                <fullName>CRADA - Cooperative Research and Development Agreement</fullName>
            </value>
            <value>
                <fullName>CRC - Cost Reimbursable Contract</fullName>
            </value>
            <value>
                <fullName>CRG - Cost Reimbursable Grant</fullName>
            </value>
            <value>
                <fullName>FPLOE - Firm Fixed Price, Level of Effort</fullName>
            </value>
            <value>
                <fullName>FX - Firm Fixed Price</fullName>
            </value>
            <value>
                <fullName>ILA - Interlaboratory Authorization</fullName>
            </value>
            <value>
                <fullName>IPA - Intergovernmental Personnel Act</fullName>
            </value>
            <value>
                <fullName>IP - Intellectual Property</fullName>
            </value>
            <value>
                <fullName>OC - Operating Contract</fullName>
            </value>
            <value>
                <fullName>T&amp;M - Time and Materials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>