force-app/main/default/objects/Opportunity/fields/Contractor_Name__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Name__c</fullName>
    <defaultValue>&quot;Battelle Memorial Institute - Pacific Northwest National Laboratory&quot;</defaultValue>
    <label>Contractor Name</label>
    <type>TextArea</type>
</CustomField>