force-app/main/default/objects/Opportunity/fields/Cost_Code__c.field-meta.xml
<CustomField>
    <fullName>Cost_Code__c</fullName>
    <label>Cost Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>