force-app/main/default/objects/Opportunity/fields/Cost_Sheet_Line_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sheet_Line_Rollup__c</fullName>
    <description>Roll-up of Opportunity LineItems (Cost Sheet Lines).</description>
    <label>Cost Sheet Line Rollup</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>