force-app/main/default/objects/Opportunity/fields/Costing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Costing_Comments__c</fullName>
    <label>Cost Detail Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>