force-app/main/default/objects/Opportunity/fields/CRADA_Count__c.field-meta.xml
<CustomField>
    <fullName>CRADA_Count__c</fullName>
    <label>CRADA Count</label>
    <summaryFilterItems>
        <field>Funding_Agreement__c.CRADA__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Funding_Agreement__c.Proposal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>