force-app/main/default/objects/Opportunity/fields/CRADA_Title__c.field-meta.xml
<CustomField>
    <fullName>CRADA_Title__c</fullName>
    <label>CRADA Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>