force-app/main/default/objects/Opportunity/fields/CRADA_Type__c.field-meta.xml
<CustomField>
    <fullName>CRADA_Type__c</fullName>
    <label>CRADA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOE Funded</fullName>
            </value>
            <value>
                <fullName>DOE with Funds In</fullName>
            </value>
            <value>
                <fullName>Full Funds In</fullName>
            </value>
            <value>
                <fullName>Master Scope of Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>