force-app/main/default/objects/Opportunity/fields/Current_Action_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Action_Amount__c</fullName>
    <label>Current Action Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>