force-app/main/default/objects/Opportunity/fields/Date_Prepared__c.field-meta.xml
<CustomField>
    <fullName>Date_Prepared__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Prepared</label>
    <type>Date</type>
</CustomField>