force-app/main/default/objects/Opportunity/fields/Date_Submitted_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_to_Client__c</fullName>
    <label>Date Submitted to Client</label>
    <type>Date</type>
</CustomField>