force-app/main/default/objects/Opportunity/fields/Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Deliverables__c</fullName>
    <label>Deliverables</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>