force-app/main/default/objects/Opportunity/fields/DOE_Field_Element__c.field-meta.xml
<CustomField>
    <fullName>DOE_Field_Element__c</fullName>
    <label>DOE Field Element</label>
    <length>15</length>
    <type>Text</type>
</CustomField>