force-app/main/default/objects/Opportunity/fields/DOE_Field_Element_Work_Proposal_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>DOE_Field_Element_Work_Proposal_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DOE Field Element Work Proposal Reviewer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.DOE_Field_Element_Work_Proposal_Reviewer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>