force-app/main/default/objects/Opportunity/fields/DOE_IP_Approver__c.field-meta.xml
<CustomField>
    <fullName>DOE_IP_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DOE IP Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.DOE_IP_Approver__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesWt78</relationshipName>
    <type>Lookup</type>
</CustomField>