force-app/main/default/objects/Opportunity/fields/DOE_Site_Office_Approver2__c.field-meta.xml
<CustomField>
    <fullName>DOE_Site_Office_Approver2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DOE Site Office Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.DOE_Site_Office_Approver__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>