force-app/main/default/objects/Opportunity/fields/DOE_Site_Office_Approver__c.field-meta.xml
<CustomField>
    <fullName>DOE_Site_Office_Approver__c</fullName>
    <label>DOE Site Office Approver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Genice Madera</fullName>
                <default>true</default>
                <label>Genice Madera</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>