force-app/main/default/objects/Opportunity/fields/EMSL_Approval_Number__c.field-meta.xml
<CustomField>
    <fullName>EMSL_Approval_Number__c</fullName>
    <inlineHelpText>If an EMSL User Agreement is required, provide the User Agreement number in the EMSL Approval No. box.  Provide the following in the Additional Comments box- Address whether the sponsor will be coming onsite to work within the EMSL space.</inlineHelpText>
    <label>EMSL Approval Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>