force-app/main/default/objects/Opportunity/fields/EMSL_Facility_Capability_Use__c.field-meta.xml
<CustomField>
    <fullName>EMSL_Facility_Capability_Use__c</fullName>
    <inlineHelpText>If the project will be utilizing the EMSL Facility/Capability (includes laboratory, capability office space or EMSL resources), Mark “YES”</inlineHelpText>
    <label>EMSL Facility/Capability Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>