force-app/main/default/objects/Opportunity/fields/EPR_Contract_Client__c.field-meta.xml
<CustomField>
    <fullName>EPR_Contract_Client__c</fullName>
    <label>EPR Contract Client</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>