force-app/main/default/objects/Opportunity/fields/EPR_Funding_Client__c.field-meta.xml
<CustomField>
    <fullName>EPR_Funding_Client__c</fullName>
    <label>EPR Funding Sponsor</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>