force-app/main/default/objects/Opportunity/fields/EPR_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>EPR_Signed_Date__c</fullName>
    <label>EPR Signed Date</label>
    <type>Date</type>
</CustomField>