force-app/main/default/objects/Opportunity/fields/ES_H_Considerations__c.field-meta.xml
<CustomField>
    <fullName>ES_H_Considerations__c</fullName>
    <label>ES&amp;H Considerations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>