force-app/main/default/objects/Opportunity/fields/Executive_Summary__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary__c</fullName>
    <label>Executive Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>